<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_700"
    tools:context=".ui.CreateLogoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/teal_700"
                android:orientation="horizontal"
                tools:visibility="visible">

                <ImageButton
                    android:id="@+id/btnFreeDrawing"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_free_drawing_description"
                    android:src="@drawable/ic_draw_24px" />

                <ImageButton
                    android:id="@+id/btnCircleDrawing"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_circle_drawing_description"
                    android:src="@drawable/ic_panorama_fish_eye_24px" />

                <ImageButton
                    android:id="@+id/btnSquareDrawing"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_square_drawing_description"
                    android:src="@drawable/ic_crop_square_24px" />

                <ImageButton
                    android:id="@+id/btnLineDrawing"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_line_drawing_description"
                    android:src="@drawable/ic_method_draw_image" />

                <ImageButton
                    android:id="@+id/btnEraseOption"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_erase_option_description"
                    android:src="@drawable/ic_eraser" />

                <ImageButton
                    android:id="@+id/btnTextOption"
                    android:layout_width="@dimen/editor_buttons_width"
                    android:layout_height="@dimen/editor_buttons_height"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/btn_text_option_description"
                    android:src="@drawable/ic_title_24px" />
            </LinearLayout>
        </HorizontalScrollView>

        <es.uniovi.eii.stitchingbot.canvas.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</FrameLayout>